<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HellowWorld</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="instruct">Match the text to the Colour below!</string>
	<string name="reset">Reset</string>
	<string name="score">0</string>
	<string name="highscore">Highscore: </string>
	

</resources>
